compiler/tools/fpp-check/test/spec_init/undef_phase.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_init/undef_phase.fpp:7.9
  phase P "c phase P"
        ^
error: cannot find symbol `P`
note: looking for a constant here
